<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alarm Clock</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="button_setting">Settings</string>
	<string name="button_info">Info</string>
	<string name="pick_time">Set Alarm</string>
	<string name="isActive">Active</string>
	<string name="never">Never</string>
    <string name="always">Always</string>
    <string name="other">Other Options</string>
    <string name="Music1">Music 1</string>
    <string name="Music2">Music 2</string>
    <string name="Music3">Music 3</string>
    <string name="Music4">Music 4</string>
    <string name="Music5">Music 5</string>
    <string name="Music6">Music 6</string>
    <string name="Music7">Music 7</string>
    <string name="Music8">Music 8</string>
    <string name="Music9">Music 9</string>
    
    <string name="SnoozeDuration1">5 minutes</string>
    <string name="SnoozeDuration2">10 minutes</string>
    <string name="SnoozeDuration3">15 minutes</string>
    <string name="SnoozeDuration4">20 minutes</string>
    <string name="SnoozeDuration5">25 minutes</string>
    <string name="SnoozeDuration6">30 minutes</string>
    <string name="SnoozeDuration7">Never</string>
    
    <string name="AlarmStartDate">Start</string>
    <string name="AlarmEndDate">End</string>
    <string name="IsMondayAlarmOn">Monday</string>
    <string name="IsTuesdayAlarmOn">Tuesday</string>
    <string name="IsWesnesdayAlarmOn">Wednesday</string>
    <string name="IsThursdayAlarmOn">Thursday</string>
    <string name="IsFridayAlarmOn">Friday</string>
    <string name="IsSaturdayAlarmOn">Satday</string>
    <string name="IsSundayAlarmOn">Sunday</string>
</resources>
