<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:paddingBottom="5dp"
        android:paddingTop="5dp" 
        >
        <RadioGroup
            android:id="@+id/ringToneGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/Music1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/Music1" />
            <RadioButton
                android:id="@+id/Music2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Music2" />
            <RadioButton
                android:id="@+id/Music3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Music3" />
            <RadioButton
                android:id="@+id/Music4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Music4" />
            <RadioButton
                android:id="@+id/Music5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Music5" />
            <RadioButton
                android:id="@+id/Music6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Music6" />
            <RadioButton
                android:id="@+id/Music7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Music7" />
            <RadioButton
                android:id="@+id/Music8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Music8" />
            <RadioButton
                android:id="@+id/Music9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Music9" />
        </RadioGroup>
    </RelativeLayout>
</RelativeLayout>